--- a/uurukg/app/templates/sng.html
+++ b/uurukg/app/templates/sng.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News</title>
+    <title>Новости СНГ</title>
 </head>
 <body>
-
+<p>Новости СНГ</p>
 </body>
 </html>
