--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -67,21 +67,21 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
             <div class="navbar-nav mr-auto py-0">
-                <a href="index.html" class="nav-item nav-link active">Главная</a>
+                <a href="/" class="nav-item nav-link active">Главная</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Новости</a>
                     <div class="dropdown-menu rounded-0 m-0">
                         <a href="#" class="dropdown-item">Новости СНГ</a>
-                        <a href="#" class="dropdown-item">Экономика</a>
+                        <a href="#economica" class="dropdown-item">Экономика</a>
                         <a href="#" class="dropdown-item">Спорт</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
                     <div class="dropdown-menu rounded-0 m-0">
-                        <a href="#" class="dropdown-item">Коррупция</a>
-                        <a href="#" class="dropdown-item">ОПГ</a>
-                        <a href="#" class="dropdown-item">Преступления</a>
+                        <a href="korrupcia/all" class="dropdown-item">Коррупция</a>
+                        <a href="opg/all" class="dropdown-item">ОПГ</a>
+                        <a href="criminal/all" class="dropdown-item">Преступления</a>
                     </div>
                 </div>
 <!--                <div class="nav-item dropdown">-->
@@ -93,8 +93,8 @@
 <!--                    </div>-->
 <!--                </div>-->
 <!--                <a href="category.html" class="nav-item nav-link">Коррупционеры и ОПГ</a>-->
-                <a href="category.html" class="nav-item nav-link">Репортер</a>
-                <a href="single.html" class="nav-item nav-link">Аналитика</a>
+                <a href="reporter/all" class="nav-item nav-link">Репортер</a>
+                <a href="analitika/all" class="nav-item nav-link">Аналитика</a>
             </div>
             <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                 <input type="text" class="form-control border-0" placeholder="Поиск...">
@@ -196,14 +196,15 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid pt-5">
-            <div class="container">
+
+        <div class="container-fluid pt-5" >
+            <div class="container" >
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="row">
                             <div class="col-12">
                                 <div class="section-title">
-                                    <h4 class="m-0 text-uppercase font-weight-bold">Экономика</h4>
+                                    <h4 class="m-0 text-uppercase font-weight-bold"  id="economica">Экономика</h4>
                                     <a class="text-secondary font-weight-medium text-decoration-none" href="economic/all">Смотреть
                                         все</a>
                                 </div>
@@ -229,8 +230,7 @@
                     </div>
                 </div>
             </div>
-
-                                <div class="container-fluid pt-5">
+                  <div class="container-fluid pt-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -263,40 +263,69 @@
     </div>
                     </div>
 </div>
-
-                          <div class="container-fluid pt-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="section-title">
-                                    <h4 class="m-0 text-uppercase font-weight-bold">Спорт</h4>
-                                    <a class="text-secondary font-weight-medium text-decoration-none" href="">Смотреть
-                                        все</a>
+                    <div class="container-fluid pt-5">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="section-title">
+                                                <h4 class="m-0 text-uppercase font-weight-bold">Спорт</h4>
+                                                <a class="text-secondary font-weight-medium text-decoration-none" href="sport/all">Смотреть
+                                                    все</a>
+                                            </div>
+                                        </div>
+                                            <div class="card-group">
+                                 <div class="row row-cols-1 row-cols-md-3 g-4">
+                                     {% for i in newsSport %}
+                                       <a href="post/{{i.id}}">
+                                          <div class="col">
+                                            <div class="card h-100">
+                                              <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+                                              <div class="card-body">
+                                                <h5 class="card-title">{{ i.title }}</h5>
+                                                <p class="card-text">{{ i.description }}</p>
+                                              </div>
+                                            </div>
+                                          </div>
+                                       </a>
+                                     {% endfor %}
                                 </div>
                             </div>
+                        </div>
+                    </div>
 
-
-                                <div class="card-group">
-                     <div class="row row-cols-1 row-cols-md-3 g-4">
-                         {% for i in newsSport %}
-                           <a href="post/{{i.id}}">
-                              <div class="col">
-                                <div class="card h-100">
-                                  <img src="{{ i.image.url }}" class="card-img-top" alt="...">
-                                  <div class="card-body">
-                                    <h5 class="card-title">{{ i.title }}</h5>
-                                    <p class="card-text">{{ i.description }}</p>
-                                  </div>
+                                <div class="container-fluid pt-5">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="section-title">
+                                                <h4 class="m-0 text-uppercase font-weight-bold">Новости СНГ</h4>
+                                                <a class="text-secondary font-weight-medium text-decoration-none" href="sng/all">Смотреть
+                                                    все</a>
+                                            </div>
+                                        </div>
+                                            <div class="card-group">
+                                 <div class="row row-cols-1 row-cols-md-3 g-4">
+                                     {% for i in sng %}
+                                       <a href="post/{{i.id}}">
+                                          <div class="col">
+                                            <div class="card h-100">
+                                              <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+                                              <div class="card-body">
+                                                <h5 class="card-title">{{ i.title }}</h5>
+                                                <p class="card-text">{{ i.description }}</p>
+                                              </div>
+                                            </div>
+                                          </div>
+                                       </a>
+                                     {% endfor %}
                                 </div>
-                              </div>
-                           </a>
-                         {% endfor %}
+                            </div>
+                        </div>
                     </div>
-    </div>
-                    </div>
-</div>
                             <div class="col-12">
                                 <div class="section-title">
                                     <h4 class="btn btn-primary btn-lg btn-block"><a href="news/all" style="color:black">Читать все новоcти</a></h4>
