add press releases

--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -1,115 +1,10 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
 {% load static %}
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <title>Уруу KG</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
-    <!-- Favicon -->
-    <link href="{% static 'img/favicon.ico' %}" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="{%static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="{%static 'css/style.css' %}" rel="stylesheet">
-</head>
-
-<body>
-<!-- Topbar Start -->
-<div class="container-fluid d-none d-lg-block">
-    <div class="row align-items-center bg-dark px-lg-5">
-        <div class="col-lg-9">
-            <nav class="navbar navbar-expand-sm bg-dark p-0">
-                <ul class="navbar-nav ml-n2">
-                    <li class="nav-item border-right border-secondary">
-                        <a class="nav-link text-body small" href="#">Четверг, 8 июня 2023 </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-    <div class="row align-items-center bg-white py-3 px-lg-5">
-        <div class="col-lg-4">
-            <a href="index.html" class="navbar-brand p-0 d-none d-lg-block">
-                <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
-                        class="text-secondary font-weight-normal">KG</span></h1>
-            </a>
-        </div>
-        <div class="col-lg-8 text-center text-lg-right">
-            <a href="https://htmlcodex.com"><img class="img-fluid" src="img/ads-728x90.png" alt=""></a>
-        </div>
-    </div>
-</div>
-<!-- Topbar End -->
+{% block page_content %}
 
 
-<!-- Navbar Start -->
-<div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-0 py-lg-0 px-lg-5">
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
-                    class="text-white font-weight-normal">.KG</span></h1>
-        </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
-            <div class="navbar-nav mr-auto py-0">
-                <a href="/" class="nav-item nav-link active">Главная</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Новости</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="#" class="dropdown-item">Новости СНГ</a>
-                        <a href="#economica" class="dropdown-item">Экономика</a>
-                        <a href="#" class="dropdown-item">Спорт</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="korrupcia/all" class="dropdown-item">Коррупция</a>
-                        <a href="opg/all" class="dropdown-item">ОПГ</a>
-                        <a href="criminal/all" class="dropdown-item">Преступления</a>
-                    </div>
-                </div>
-<!--                <div class="nav-item dropdown">-->
-<!--                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Пресс-релизы</a>-->
-<!--                    <div class="dropdown-menu rounded-0 m-0">-->
-<!--                        <a href="#" class="dropdown-item">ГКНБ</a>-->
-<!--                        <a href="#" class="dropdown-item">Прокуратура</a>-->
-<!--                        <a href="#" class="dropdown-item">МВД</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <a href="category.html" class="nav-item nav-link">Коррупционеры и ОПГ</a>-->
-                <a href="reporter/all" class="nav-item nav-link">Репортер</a>
-                <a href="analitika/all" class="nav-item nav-link">Аналитика</a>
-            </div>
-            <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
-                <input type="text" class="form-control border-0" placeholder="Поиск...">
-                <div class="input-group-append">
-                    <button class="input-group-text bg-primary text-dark border-0 px-3"><i
-                            class="fa fa-search"></i></button>
-                </div>
-            </div>
-        </div>
-    </nav>
-</div>
-<!-- Navbar End -->
-
-
-<!-- Main News Slider Start -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-7 px-0">
@@ -157,12 +52,12 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="section-title">
-                                    <h4 class="m-0 text-uppercase font-weight-bold">Последние новости</h4>
+                                    <h4 class="m-0 text-uppercase font-weight-bold" id="news">Последние новости</h4>
                                     <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть
                                         все</a>
                                 </div>
                             </div>
- {% for i in posts %}
+                    {% for i in posts %}
                             <div class="col-lg-6">
 
                                 <div class="position-relative mb-3">
@@ -361,5 +256,5 @@
 
     </div>
 </div>
-</body>
-</html>
+</div>
+     {% endblock %}
