--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -1,16 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Все новости</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block page_content %}
+
+{% load static %}
 <h2>Все новости</h2>
 
-{% for i in news %}
-<p>{{i.title}}</p>
-<br><br><br><br><br><br><br><br><br><br>
-
+<div class="row text-dark">
+       {% for item in news %}
+      <div class="col-md-4">
+          <div class="card-deck">
+        <div class="card">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
+          <a href="#">{{ item.category.title }}</a>
+            <div class="card-body">
+                <a href="/post/{{item.id}}"><h5 class="card-title">{{ item.title }}</h5></a>
+                <p class="card-text">{{ item.description }}</p>
+            </div>
+             <div class="card-footer">
+                 <small class="text-muted">{{ item.created_date }}</small>
+<!--                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="/post/{{item.id}}">{{ item.title }}</a>-->
+            </div>
+        </div>
+    </div>
+      </div>
 {% endfor %}
-</body>
-</html>
+</div>
+
+
+<!--<p>{{i.title}}</p>-->
+<!--<br><br><br><br><br><br><br><br><br><br>-->
+
+
+     {% endblock %}
