--- a/uurukg/app/templates/korrupcia.html
+++ b/uurukg/app/templates/korrupcia.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Коррупция</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block page_content %}
+
+{% endblock %}
