--- a/uurukg/app/templates/reporter.html
+++ b/uurukg/app/templates/reporter.html
@@ -1,14 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Репортер</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block page_content %}
+
+{% load static %}
 <h2>Репортер</h2>
-{% for i in news %}
-<p>{{i.title}}</p>
-{% endfor %}
-<br><br><br><br><br><br><br><br><br><br>
-</body>
-</html>
+
+
+<div class="row text-dark">
+       {% for item in news %}
+      <div class="col-md-2">
+          <div class="card-deck">
+        <div class="card">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
+          <a href="">{{ item.category.title }}</a>
+            <div class="card-body">
+                <h5 class="card-title">{{ с.title }}</h5>
+                <p class="card-text">{{ item.description }}</p>
+            </div>
+             <div class="card-footer">
+      <small class="text-muted"><p class="card-text">{{ item.created_date }}</p></small>
+    </div>
+        </div>
+    </div>
+      </div>
+          {% endfor %}
+
+      </div>
+
+     {% endblock %}
