--- a/uurukg/app/templates/sng.html
+++ b/uurukg/app/templates/sng.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Новости СНГ</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block page_content %}
 <p>Новости СНГ</p>
-</body>
-</html>
+
+{% endblock %}
