--- a/uurukg/app/templates/analitika.html
+++ b/uurukg/app/templates/analitika.html
@@ -7,6 +7,7 @@
 
 <div class="row text-dark">
        {% for item in news %}
+     <a href="/post/{{item.id}}">
       <div class="col-md-3">
           <div class="card-deck">
         <div class="card">
@@ -21,6 +22,7 @@
     </div>
         </div>
     </div>
+     </a>
           {% endfor %}
       </div>
 </div>
