--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -65,7 +65,7 @@
 <!-- Navbar Start -->
 <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-0 py-lg-0 px-lg-5">
-        <a href="/" class="navbar-brand d-block d-lg-none">
+        <a href="main" class="navbar-brand d-block d-lg-none">
             <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
                     class="text-white font-weight-normal">.KG</span></h1>
         </a>
