--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -5,23 +5,23 @@
 <h2>Пресс-релизы</h2>
 
 
-<div class="row text-dark">
-       {% for item in news %}
-      <div class="col-md-3">
-          <div class="card-deck">
-        <div class="card">
-              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
-          <a href="">{{ item.departments.title }}</a>
-            <div class="card-body">
-                <h5 class="card-title">{{ с.title }}</h5>
-                <p class="card-text">{{ item.description }}</p>
-            </div>
-             <div class="card-footer">
-      <small class="text-muted"><p class="card-text">{{ item.created_date }}</p></small>
-    </div>
-        </div>
-    </div>
-          {% endfor %}
+<div class="list-group">
+    {% for item in news %}
+
+<a href="/release/{{item.id}}" class="list-group-item list-group-item-action">
+    <div class="media">
+      <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
+      <div class="media-body">
+          <h6 class="mt-0 text-left">{{ item.departments.title }}</h6>
+
+        <h4 class="mt-0 text-left">{{ item.title }}</h4>
+        <p class="mb-1">{{ item.description }}</p>
+        <small>{{ item.created_date }}</small>
       </div>
+    </div>
+  </a>
+
+ {% endfor %}
 </div>
+
      {% endblock %}
