--- a/uurukg/app/templates/search_result.html
+++ b/uurukg/app/templates/search_result.html
@@ -1,20 +1,40 @@
-<!DOCTYPE html>
+
+
+{% extends 'base.html' %}
+{% block page_content %}
+
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 {% if person %}
+
+
 {% for i in person %}
-<p>{{i.name}}</p>
-<p>{{i.position}}</p>
-<p>{{i.resume}}</p>
-<p>{{i.dop_info}}</p>
+<a href="/dopinfo/{{i.id}}">
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="{{ i.image.url }}" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <a href="/dopinfo/{{i.id}}"> <h5 class="card-title">{{i.name}}</h5></a>
+        <p class="card-text"> {{i.position}}</p>
+<!--        <p class="card-text"> {{i.position}}</p>-->
+<!--        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+      </div>
+    </div>
+  </div>
+</div>
+</a>
+
+
+
+<!--<p>{{i.name}}</p>-->
+<!--<p>{{i.position}}</p>-->
+<!--<p>{{i.resume}}</p>-->
+<!--<p>{{i.dop_info}}</p>-->
 {% endfor %}
 {% else %}
-<p>Not found</p>
+<p>Пользователей не найдено</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
