--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -78,9 +78,12 @@
                 <div class="nav-item dropdown">
                     <a href="/news/all" class="nav-link dropdown-toggle" data-toggle="dropdown">Новости</a>
                     <div class="dropdown-menu rounded-0 m-0">
-                        <a href="/" class="dropdown-item">Новости СНГ</a>
-                        <a href="#economica" class="dropdown-item">Экономика</a>
-                        <a href="#" class="dropdown-item">Спорт</a>
+<!--                        <a href="/" class="dropdown-item">Новости СНГ</a>-->
+                         <a href="/sng/all" class="dropdown-item">Новости СНГ</a>
+<!--                        <a href="#economica" class="dropdown-item">Экономика</a>-->
+                        <a href="/economic/all" class="dropdown-item">Экономика</a>
+<!--                        <a href="#" class="dropdown-item">Спорт</a>-->
+                        <a href="/sport/all" class="dropdown-item">Спорт</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
