--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -12,7 +12,7 @@
     <div class="media">
       <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
       <div class="media-body">
-          <h6 class="mt-0 text-left">{{ item.departments.title }}</h6>
+          <h6 class="mt-0 text-left text-warning">{{ item.departments.title }}</h6>
 
         <h4 class="mt-0 text-left">{{ item.title }}</h4>
         <p class="mb-1">{{ item.description }}</p>
