--- a/uurukg/app/templates/opg.html
+++ b/uurukg/app/templates/opg.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ОПГ</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block page_content %}
+
+{% load static %}
 <h2>ОПГ</h2>
-</body>
-</html>
+
+<div class="row text-dark">
+       {% for item in news %}
+     <a href="/post/{{item.id}}">
+      <div class="col-md-4">
+          <div class="card-deck">
+        <div class="card">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
+          <a href="#">{{ item.category.title }}</a>
+            <div class="card-body">
+                <a href="/post/{{item.id}}"><h5 class="card-title">{{ item.title }}</h5></a>
+                <p class="card-text">{{ item.description }}</p>
+            </div>
+             <div class="card-footer">
+                 <small class="text-muted">{{ item.created_date }}</small>
+<!--                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="/post/{{item.id}}">{{ item.title }}</a>-->
+            </div>
+        </div>
+    </div>
+      </div>
+     </a>
+{% endfor %}
+</div>
+
+
+<!--<p>{{i.title}}</p>-->
+<!--<br><br><br><br><br><br><br><br><br><br>-->
+
+
+     {% endblock %}
