--- a/uurukg/app/templates/reporter.html
+++ b/uurukg/app/templates/reporter.html
@@ -7,6 +7,7 @@
 
 <div class="row text-dark">
        {% for item in news %}
+     <a href="/post/{{item.id}}">
       <div class="col-md-2">
           <div class="card-deck">
         <div class="card">
@@ -22,6 +23,7 @@
         </div>
     </div>
       </div>
+     </a>
           {% endfor %}
 
       </div>
