--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -65,7 +65,7 @@
 <!-- Navbar Start -->
 <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-0 py-lg-0 px-lg-5">
-        <a href="main" class="navbar-brand d-block d-lg-none">
+        <a href="/" class="navbar-brand d-block d-lg-none">
             <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
                     class="text-white font-weight-normal">.KG</span></h1>
         </a>
@@ -78,11 +78,8 @@
                 <div class="nav-item dropdown">
                     <a href="/news/all" class="nav-link dropdown-toggle" data-toggle="dropdown">Новости</a>
                     <div class="dropdown-menu rounded-0 m-0">
-<!--                        <a href="/" class="dropdown-item">Новости СНГ</a>-->
                          <a href="/sng/all" class="dropdown-item">Новости СНГ</a>
-<!--                        <a href="#economica" class="dropdown-item">Экономика</a>-->
                         <a href="/economic/all" class="dropdown-item">Экономика</a>
-<!--                        <a href="#" class="dropdown-item">Спорт</a>-->
                         <a href="/sport/all" class="dropdown-item">Спорт</a>
                     </div>
                 </div>
@@ -94,15 +91,6 @@
                         <a href="/criminal/all" class="dropdown-item">Преступления</a>
                     </div>
                 </div>
-<!--                <div class="nav-item dropdown">-->
-<!--                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Пресс-релизы</a>-->
-<!--                    <div class="dropdown-menu rounded-0 m-0">-->
-<!--                        <a href="#" class="dropdown-item">ГКНБ</a>-->
-<!--                        <a href="#" class="dropdown-item">Прокуратура</a>-->
-<!--                        <a href="#" class="dropdown-item">МВД</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <a href="category.html" class="nav-item nav-link">Коррупционеры и ОПГ</a>-->
                 <a href="/reporter/all" class="nav-item nav-link">Репортер</a>
                 <a href="/analitika/all" class="nav-item nav-link">Аналитика</a>
                 <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>
@@ -110,8 +98,7 @@
             <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                 <input type="text" class="form-control border-0" placeholder="Поиск...">
                 <div class="input-group-append">
-                    <button class="input-group-text bg-primary text-dark border-0 px-3"><i
-                            class="fa fa-search"></i></button>
+                    <button class="input-group-text bg-primary text-dark border-0 px-3"><i class="fa fa-search"></i></button>
                 </div>
             </div>
         </div>
