--- a/uurukg/app/templates/opg.html
+++ b/uurukg/app/templates/opg.html
@@ -2,7 +2,8 @@
 {% block page_content %}
 
 {% load static %}
-<h2>ОПГ</h2>
+<div class="py-3 ml-2 mr-2 ">
+<h2 class="text-center">ОПГ</h2>
 
 <div class="row text-dark">
        {% for item in news %}
@@ -26,7 +27,7 @@
      </a>
 {% endfor %}
 </div>
-
+</div>
 
 <!--<p>{{i.title}}</p>-->
 <!--<br><br><br><br><br><br><br><br><br><br>-->
