--- a/uurukg/app/templates/release_detail.html
+++ b/uurukg/app/templates/release_detail.html
@@ -3,7 +3,7 @@
 {% load embed_video_tags %}
 {% load static %}
 
-<div class="pt-5">
+<div class="py-5">
 <h2 class="text-center"><small class="text-warning">{{ press_release.departments.title }}</small>: {{press_release.title}}</h2>
 <div class="row mx-5 text-dark">{{ press_release.overview | safe }}
         <img src="{{ press_release.image.url }}" class="img-fluid rounded-start" style="width: 400px;">
