--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-lg-7 px-0">
             <div class="owl-carousel main-carousel position-relative">
-                {% for i in top%}
+                {% for i in top %}
                 <div class="position-relative overflow-hidden" style="height: 500px;">
 <!--                    <img class="img-fluid h-100" src="{% static 'img/news-800x500-1.jpg' %}" style="object-fit: cover;">-->
                     <img class="img-fluid h-100" src="{{ i.image.url }}" style="object-fit: cover;">
@@ -53,13 +53,11 @@
                             <div class="col-12">
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="news">Последние новости</h4>
-                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть
-                                        все</a>
+                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть все</a>
                                 </div>
                             </div>
                     {% for i in posts %}
                             <div class="col-lg-6">
-
                                 <div class="position-relative mb-3">
                                     <img class="img-fluid w-100" src="{{ i.image.url }}"
                                          style="object-fit: cover;">
@@ -78,7 +76,6 @@
                                         </div>
                                         <div class="d-flex align-items-center">
                                             <a href="post/{{i.id}}">Читать поробнее...</a>
-
                                         </div>
                                     </div>
                                 </div>
@@ -189,7 +186,6 @@
                             </div>
                         </div>
                     </div>
-
                                 <div class="container-fluid pt-5">
                         <div class="container">
                             <div class="row">
@@ -198,14 +194,13 @@
                                         <div class="col-12">
                                             <div class="section-title">
                                                 <h4 class="m-0 text-uppercase font-weight-bold">Новости СНГ</h4>
-                                                <a class="text-secondary font-weight-medium text-decoration-none" href="sng/all">Смотреть
-                                                    все</a>
+                                                <a class="text-secondary font-weight-medium text-decoration-none" href="sng/all">Смотреть все</a>
                                             </div>
                                         </div>
                                             <div class="card-group">
                                  <div class="row row-cols-1 row-cols-md-3 g-4">
                                      {% for i in sng %}
-                                       <a href="post/{{i.id}}">
+                                       <a href="sng/{{i.id}}">
                                           <div class="col">
                                             <div class="card h-100">
                                               <img src="{{ i.image.url }}" class="card-img-top" alt="...">
