--- a/uurukg/app/templates/korrupcia.html
+++ b/uurukg/app/templates/korrupcia.html
@@ -1,6 +1,29 @@
 {% extends 'base.html' %}
-{% load static %}
-
 {% block page_content %}
 
-{% endblock %}
+{% load static %}
+<h2>Коррупция</h2>
+
+<div class="row text-dark">
+       {% for item in news %}
+     <a href="/post/{{item.id}}">
+      <div class="col-md-3">
+          <div class="card-deck">
+        <div class="card">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
+          <a href="">{{ item.category.title }}</a>
+            <div class="card-body">
+                <h5 class="card-title">{{ с.title }}</h5>
+                <p class="card-text">{{ item.description }}</p>
+            </div>
+             <div class="card-footer">
+      <small class="text-muted"><p class="card-text">{{ item.created_date }}</p></small>
+    </div>
+        </div>
+    </div>
+      </div>
+     </a>
+          {% endfor %}
+      </div>
+</div>
+     {% endblock %}
