--- a/uurukg/app/templates/reporter_detail.html
+++ b/uurukg/app/templates/reporter_detail.html
@@ -3,7 +3,7 @@
 {% load embed_video_tags %}
 {% load static %}
 
-
+<div class="py-5">
 <h2 class="text-center">{{ post.title }}</h2>
 <div class="row mx-5">{{ post.overview | safe }}<img src="{{ post.image.url }}" class="img-fluid rounded-start" style="width: 400px;">
 </div>
