--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row align-items-center bg-white py-3 px-lg-5">
         <div class="col-lg-4">
-            <a href="index.html" class="navbar-brand p-0 d-none d-lg-block">
+            <a href="/" class="navbar-brand p-0 d-none d-lg-block">
                 <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
                         class="text-secondary font-weight-normal">KG</span></h1>
             </a>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
+                    <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
                     <div class="dropdown-menu rounded-0 m-0">
                         <a href="/korrupcia/all" class="dropdown-item">Коррупция</a>
                         <a href="/opg/all" class="dropdown-item">ОПГ</a>
@@ -108,7 +108,26 @@
 {% block page_content %}
     {% endblock %}
 
+
+           <!-- Popular News End -->
+                        <!-- Footer Start -->
+                        <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
+                            <p class="m-0 text-center">&copy; <a href="#">УРУУ.KG</a> Все права защищены.
+                        </div>
+                        <!-- Footer End -->
+                        <!-- Back to Top -->
+                        <a href="#" class="btn btn-primary btn-square back-to-top"><i class="fa fa-arrow-up"></i></a>
+                        <!-- JavaScript Libraries -->
+
 <!-- Main News Slider Start -->
 
+
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+                        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+                        <script src="{% static 'lib/easing/easing.min.js' %}"></script>
+                        <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
+
+                        <!-- Template Javascript -->
+                        <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
